Fix spacing of body elements

--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,7 @@ body {
   width: 100vw;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  /* overflow: hidden; */
+  justify-content: center;
 }
 
 #header {
@@ -92,7 +91,8 @@ footer {
   margin: 0 15%;
   padding: 5px 0;
   border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.463);
+  background-color: rgba(33, 33, 33, 0.8);
+  color: white;
   text-align: center;
 }
 
